syntax = "proto3";

package image;

service ImagesService {
    rpc GetGameThumbnail(GameImageRequest) returns (stream GameThumbnailResponse);
    rpc GetGameImages(GameImageRequest) returns (stream GameImagesResponse);

    // TODO: Uploading images
}

message GameImageRequest {
    uint32 game_id = 1;
}

message GameThumbnailResponse {
    bytes data = 1;
}

message GameImagesResponse {
    uint32 image_id = 1;
    bytes data = 2;
}